# taladores_ogts

./: .cproject  .gitignore  .lldbinit  .project  algo_no_opt.txt  algo_opt.txt  caca.java  caca10.txt  caca2.txt  caca2a.txt  caca5.txt  caca_todos.txt  common.mk  configure.ac  genera_cagada_stress.sh  genera_cagada_stress_seguidos.sh  grafica10.m  icangive  no_opt.txt  opt.txt  yahouse  zlog.conf
src/: .gitignore  Makefile.am  main.c  taladoresogts.c  taladoresogts.h
tests/: .gitignore  Makefile.am  check_taladoresogts.c
